# esmf-sdk-py-aspect-model-loader

./: .gitignore  README.md
core/esmf-aspect-meta-model-python/: README.md  pyproject.toml  tox.ini
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/: adaptive_graph.py  constants.py  samm_meta_model.py  utils.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/base/: quantity_kind.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/impl/characteristics/: default_trait.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/loader/: aspect_loader.py  default_element_cache.py  samm_graph.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/loader/instantiator/: abstract_entity_instantiator.py  enumeration_instantiator.py  value_instantiator.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/pydentic/: aspect_meta_elements_description.xlsx  aspect_model_examples.xlsx
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/pydentic/elements/: abstract_entity.py  aspect.py  characteristic.py  complex_type.py  constraint.py  data_type.py  entity.py  event.py  operation.py  property.py  quantifiable.py  quantity_kind.py  trait.py  unit.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/pydentic/meta_model_elements/: aspect.py  bound_definition.py  event.py  operation.py  property.py  quantity_kind.py  unit.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/pydentic/test_models/: Movement.ttl
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/resolver/: base.py  data_string.py  local_file.py
core/esmf-aspect-meta-model-python/esmf_aspect_meta_model_python/samm_cli/: base.py  constants.py  download.py
core/esmf-aspect-meta-model-python/scripts/: constants.py  download_samm_cli.py
core/esmf-aspect-meta-model-python/tests/: test_aspect_functionality.py  test_entities.py  test_general.py  test_vocabulary.py
core/esmf-aspect-meta-model-python/tests/integration/: test_adaptive_graph.py  test_aspect_functionality.py  test_characteristics.py  test_cli_functions.py  test_constraints.py  test_entities.py  test_event.py  test_general.py  test_resolve_elements_referencies.py  test_subclasses.py  test_vocabulary.py
core/esmf-aspect-meta-model-python/tests/integration/aspect_model_loader/: test_aspect_functionality.py  test_characteristics.py  test_constraints.py  test_entities.py  test_event.py  test_general.py  test_resolve_elements_referencies.py  (+1 more)
core/esmf-aspect-meta-model-python/tests/unit/: test_adaptive_graph.py  test_utils.py
(+132 files in other folders)
