[project]
name = "esmf-aspect-model-loader"
version = "2.2.0"
description = "Load Aspect Models based on the Semantic Aspect Meta Model"
authors = [
    {name = "Eclipse Semantic Modeling Framework"},
    {name = "Hanna Shalamitskaya <external.Hanna.Shalamitskaya@de.bosch.com>"},
    {name = "Andreas Textor <Andreas.Textor@de.bosch.com>"},
    {name = "Georg Schmidt-Dumont <Georg.Schmidt-Dumont@de.bosch.com>"},
    {name = "Nico Makowe"},
    {name = "Aghyad Farrouh"},
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MPL-2.0"
homepage = "https://projects.eclipse.org/projects/dt.esmf"
repository = "https://github.com/bci-oss/esmf-sdk-py-aspect-model-loader"
documentation = "https://eclipse-esmf.github.io/python-sdk-guide/index.html"
keywords = ["samm", "esmf", "digital twin", "idta", "model loader", "semantic api", "semantics", "aspect"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tox (>=4.25.0,<5.0.0)",
    "zipfile37 (>=0.1.3,<0.2.0)",
    "rdflib (>=7.1.4,<8.0.0)",
]

[tool.poetry]
packages = [
    { include = "esmf_aspect_meta_model_python" },
]
include = [
    "esmf_aspect_meta_model_python/samm_aspect_meta_model/samm/**/*",
    "esmf_aspect_meta_model_python/samm_meta_model/**/*",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.8.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-sugar = "^1.0.0"
types-requests = "^2.32.0.20250328"

[project.scripts]
download-samm-release = "scripts.samm.download_samm_release:main"
download-samm-branch = "scripts.samm.download_samm_branch:main"
download-samm-cli = "scripts.download_samm_cli:download_samm_cli"
download-test-models = "scripts.download_test_models:download_test_models"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[flake8]
exclude = "__init__.py, __pycache__"
max-complexity = 10
max-line-length = 120

[isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["esmf_aspect_meta_model_python", "tests"]
line_length = 120
lines_between_types = 1
multi_line_output = 3
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry>=2.1"]
build-backend = "poetry.masonry.api"